--- a/tipografia.html
+++ b/tipografia.html
@@ -36,6 +36,7 @@
             <h1 class="display-2">Encabezado Display</h1>
             <h1 class="display-3">Encabezado Display</h1>
             <h1 class="display-4">Encabezado Display</h1>            
+            <h1 class="display-5">Encabezado Display</h1>            
           </div>
 
           <div class="col-12">
