--- a/botones.html
+++ b/botones.html
@@ -22,6 +22,8 @@
           <button type="button" class="btn btn-warning">Warning</button>
           <button type="button" class="btn btn-danger">Danger</button>
           <button type="button" class="btn btn-link">Link</button>
+          <button type="button" class="btn btn-dark">Danger</button>
+          <button type="button" class="btn btn-light">Link</button>
         </div>
     
       </div>
