--- a/botones.html
+++ b/botones.html
@@ -49,6 +49,8 @@
           <button type="button" class="btn btn-outline-warning">Warning</button>
           <button type="button" class="btn btn-outline-danger">Danger</button>
           <button type="button" class="btn btn-outline-link">Link</button>
+          <button type="button" class="btn btn-outline-dark">Link</button>
+          <button type="button" class="btn btn-outline-light">Link</button>
         </div>    
       </div>
 
