--- a/formularios/cuadros_ayuda.html
+++ b/formularios/cuadros_ayuda.html
@@ -14,7 +14,14 @@
         <div class="col">
           <form action="">
             <div class="form-group">
-              <input type="text" class="form-text" name="nombre" id="nombre" placeholder="Nombre">
+              <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Nombre">
+              <p id="" class="form-text text-muted">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni at rerum veniam soluta fuga culpa consectetur earum distinctio iure doloremque quae quaerat tempora non quos ad, voluptatum odio vitae aut.
+              </p>
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" name="correo" id="correo" placeholder="Correo">
+              <small class="form-text text-muted">Maximo 50 Caracteres</small>
             </div>
           </form>    
         </div>
