--- a/Plantilla.html
+++ b/Plantilla.html
@@ -2,10 +2,11 @@
 <html lang="es">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="utf-8">    
+    <!-- Línea necesaria para la correcta visualización en dispositivos móviles. -->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <title>Plantilla</title>
+    <title>Plantilla</title>    
   </head>
   <body>
 
