--- a/practicas/portafolio/index.html
+++ b/practicas/portafolio/index.html
@@ -25,19 +25,19 @@
 
                 <!-- Menu -->
                 <nav class="col-md-12 col-lg-auto menu d-flex align-items-strech flex-wrap flex-sm-nowrap">
-                    <a href="#" class="c-1 d-flex align-items-center">
+                    <a href="#" class="color-1 d-flex align-items-center">
                         <div class="d-flex flex-column text-center">
                             <span>Portafolio</span>
                             <i class="icono icon-briefcase"></i>    
                         </div>                        
                     </a>
-                    <a href="#" class="c-2 d-flex align-items-center">
+                    <a href="#" class="color-2 d-flex align-items-center">
                         <div class="d-flex flex-column text-center">
                             <span>Acerca de</span>
                             <i class="icono icon-user"></i>    
                         </div>                        
                     </a>
-                    <a href="#" class="c-3 d-flex align-items-center">
+                    <a href="#" class="color-3 d-flex align-items-center">
                         <div class="d-flex flex-column text-center">
                             <span>Contacto</span>
                             <i class="icono icon-mail"></i>    
