--- a/practicas/portafolio/index.html
+++ b/practicas/portafolio/index.html
@@ -13,6 +13,7 @@
     <header>
         <!-- Menúl navegación -->
         <div class="container">
+            <!-- Logo + Menu -->
             <div class="nav row rounded-top align-items-strech justify-content-between">
 
                 <!-- LogoTipo -->
@@ -47,6 +48,44 @@
                 <!-- END Menu -->
 
             </div>
+
+            <!-- Slider -->
+            <div class="row slider">
+                <div class="col">
+                    <div class="carousel slider" id="slider" data-ride="carousel">
+                        <!-- Indicadores -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#slider" data-slider-to="0" class="active"></li>
+                            <li data-target="#slider" data-slider-to="1"></li>
+                            <li data-target="#slider" data-slider-to="2"></li>
+                        </ol>
+                        <!-- END Indicadores -->
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/slide1.jpg" alt="primera imagen que mostrar en el slide" class="d-block img-fluid">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/slide2.jpg" alt="segunda imagen que mostrar en el slide" class="d-block img-fluid">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/slide3.jpg" alt="tercera imagen que mostrar en el slide" class="d-block img-fluid">
+                            </div>
+                        </div>
+                        <!-- Botón siguiente y anterior -->
+                        <a href="#slider" class="carousel-control-prev" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Anterior</span>
+                        </a>
+                        <a href="#slider" class="carousel-control-next" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Siguiente</span>
+                        </a>
+                         <!-- END Botón siguiente y anterior -->
+                    </div>
+                </div>
+            </div>
+            <!-- END Slider -->
+
         </div>
     </header>
     
