--- a/practicas/portafolio/index.html
+++ b/practicas/portafolio/index.html
@@ -88,6 +88,67 @@
 
         </div>
     </header>
+
+    <main>
+        <!-- Contenedor Principal -->
+        <div class="container">
+            <!-- Seccion Portafolio -->
+            <div class="row portafolio">
+                <div class="col">
+                    <h2 class="titulo">Portafolio</h2>
+                    <div class="row galeria justify-content-center">
+                        <div class="contenedor-imagen col-6 col-lg-4">
+                            <a href="#" data-toggle="modal" data-target="#modal">
+                                <img src="img/img-1.jpg" class="img-fluid imagen" alt="">
+                            </a>
+                        </div>
+                        <div class="contenedor-imagen col-12 col-lg-8">
+                            <a href="#" data-toggle="modal" data-target="#modal">
+                                <img src="img/img-2.jpg" class="img-fluid imagen" alt="">
+                            </a>
+                        </div>
+                        <div class="contenedor-imagen col-12 col-lg-8">
+                            <a href="#" data-toggle="modal" data-target="#modal">
+                                <img src="img/img-3.jpg" class="img-fluid imagen" alt="">
+                            </a>
+                        </div>
+                        <div class="contenedor-imagen col-6 col-lg-4">
+                            <a href="#" data-toggle="modal" data-target="#modal">
+                                <img src="img/img-4.jpg" class="img-fluid imagen" alt="">
+                            </a>
+                        </div>
+                        <div class="contenedor-imagen col-6 col-lg-4">
+                            <a href="#" data-toggle="modal" data-target="#modal">
+                                <img src="img/img-5.jpg" class="img-fluid imagen" alt="">
+                            </a>
+                        </div>
+                        <div class="contenedor-imagen col-6 col-lg-4">
+                            <a href="#" data-toggle="modal" data-target="#modal">
+                                <img src="img/img-6.jpg" class="img-fluid imagen" alt="">
+                            </a>
+                        </div>
+                        <div class="contenedor-imagen col-6 col-lg-4">
+                            <a href="#" data-toggle="modal" data-target="#modal">
+                                <img src="img/img-7.jpg" class="img-fluid imagen" alt="">
+                            </a>
+                        </div>
+                        
+                        <!-- Ventana Modal -->
+                        <div class="modal fade" id="modal">
+                            <div class="modal-dialog d-flex justify-content-center align-items-center">
+                                <div class="modal-conternt">
+                                    <img src="" alt="" id="imagen-modal">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- END Ventana Modal -->
+                    </div>
+                </div>
+            </div>
+            <!-- END Seccion Portafolio -->
+        </div>
+        <!-- END Contenedor Principal -->
+    </main>
     
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.min.js"></script>
