--- a/practicas/portafolio/index.html
+++ b/practicas/portafolio/index.html
@@ -145,7 +145,37 @@
                     </div>
                 </div>
             </div>
-            <!-- END Seccion Portafolio -->
+            <!-- END Seccion Portafolio -->            
+            <!-- Seccion Acerca de -->
+            <div class="row acerca-de align-items-center">
+                <dic class="col-12 col-lg-4 foto">
+                    <img src="img/foto.jpg" class="rounded-circle img-fluid" alt="raul cano desarrollador">
+                    <p class="nombre">Raúl Cano</p>
+                </dic>
+                <div class="col-12 col-lg-8 info">
+                    <h2 class="titulo">Acerca de</h2>
+                    <p class="resumen">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi ipsa,velit molestiae aliquam
+                        veritatis expedita exercitationem,
+                        nihil laborum maxime ea sunt cum sit necessitatibus dolores sequi error libero esse. Libero!</p>
+                    <p class="resumen">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi ipsa,velit molestiae aliquam
+                        veritatis expedita exercitationem,
+                        nihil laborum maxime ea sunt cum sit necessitatibus dolores sequi error libero esse. Libero!</p>
+
+                    <p class="label">HTML</p>
+                    <div class="progress">
+                        <div class="progress-bar" style="width: 95%;">95%</div>                        
+                    </div>
+                    <p class="label">CSS</p>
+                    <div class="progress">
+                        <div class="progress-bar" style="width: 95%;">95%</div>                        
+                    </div>
+                    <p class="label">Javascript</p>
+                    <div class="progress">
+                        <div class="progress-bar" style="width: 95%;">95%</div>                        
+                    </div>
+                </div>
+            </div>
+            <!-- END Seccion Acerca de -->
         </div>
         <!-- END Contenedor Principal -->
     </main>
