--- a/practicas/portafolio/index.html
+++ b/practicas/portafolio/index.html
@@ -92,6 +92,7 @@
     <main>
         <!-- Contenedor Principal -->
         <div class="container">
+
             <!-- Seccion Portafolio -->
             <div class="row portafolio">
                 <div class="col">
@@ -145,7 +146,8 @@
                     </div>
                 </div>
             </div>
-            <!-- END Seccion Portafolio -->            
+            <!-- END Seccion Portafolio --> 
+
             <!-- Seccion Acerca de -->
             <div class="row acerca-de align-items-center">
                 <dic class="col-12 col-lg-4 foto">
@@ -176,9 +178,42 @@
                 </div>
             </div>
             <!-- END Seccion Acerca de -->
+
+            <!-- Seccion de Contacto -->
+            <div class="row contacto justify-content-center">
+                <div class="col-12 col-lg-8">
+                    <h2 class="titulo">Contacto</h2>
+                    <form action="" class="formulario">
+                        <div class="form-group row">
+                            <div class="col-12 col-md-6">
+                                <input type="text" name="" id="" placeholder="Nombre">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <input type="email" name="" id="" placeholder="Correo">
+                            </div>                            
+                        </div>
+                        <textarea name="" id="" placeholder="Mensaje"></textarea>
+                        <div class="form-group d-flex justify-content-center">
+                            <input type="submit" class="boton" value="Enviar">
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- END Seccion de Contacto -->
         </div>
         <!-- END Contenedor Principal -->
     </main>
+
+    <footer>
+        <div class="row redes-sociales justify-content-center">
+            <div class="col-auto">
+                <a href="#" class="icono icon-twitter twitter"></a>
+                <a href="#" class="icono icon-instagram instagram"></a>
+                <a href="#" class="icono icon-facebook facebook"></a>
+            </div>
+        </div>
+
+    </footer>
     
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.min.js"></script>
