Barra lateral terminada

--- a/practicas/dashboard/index.html
+++ b/practicas/dashboard/index.html
@@ -10,6 +10,22 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="barra-lateral col-12 col-sm-auto">
+                <div class="logo">
+                    <h2>Dashboard</h2>
+                </div>
+                <nav class="menu d-flex d-sm-block justify-content-center flex-wrap">
+                    <a href="#"><i class="icon-home"></i><span>Inicio</span></a>
+                    <a href="#"><i class="icon-doc-text"></i><span>Entradas</span></a>
+                    <a href="#"><i class="icon-users"></i><span>Usuarios</span></a>
+                    <a href="#"><i class="icon-cog-alt"></i><span>Configuracion</span></a>
+                    <a href="#"><i class="icon-logout"></i><span>Salir</span></a>
+                </nav>
+            </div>
+        </div>
+    </div>
     
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.min.js"></script>
