--- a/practicas/dashboard/index.html
+++ b/practicas/dashboard/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
+            <!-- Barra lateral -->
             <div class="barra-lateral col-12 col-sm-auto">
                 <div class="logo">
                     <h2>Dashboard</h2>
@@ -24,6 +25,51 @@
                     <a href="#"><i class="icon-logout"></i><span>Salir</span></a>
                 </nav>
             </div>
+            <!-- End Barra lateral -->
+
+            <!-- Main -->
+            <main class="main col">
+                <div class="row">
+                    <!-- Widget Nueva Entrada -->
+                    <div class="columna col-lg-7">
+                        <div class="widget nueva_entrada">
+                            <h3 class="titulo">Nueva Entrada</h3>
+                            <form action="">
+                                <input type="text" placeholder="Titulo de la entrada">
+                                <textarea placeholder="Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere nisi adipisci temporibus ad nemo repellendus veniam! Explicabo, expedita obcaecati? Nulla."></textarea>
+                                <div class="d-flex justify-content-end">
+                                    <button><i class="icon icon-edit"></i>Enviar</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <!-- End Widget Nueva Entrada -->
+                    <!-- Widget Estadisticas -->
+                    <div class="columna col-lg-5">
+                        <div class="widget estadisticas">
+                            <h3 class="titulo">Estadisticas</h3>
+                            <div class="contenedor d-flex flex-wrap">
+                                <div class="caja">
+                                    <h3>15,236</h3>
+                                    <p>Visitas</p>
+                                </div>
+                                <div class="caja">
+                                    <h3>1,831</h3>
+                                    <p>Registros</p>
+                                </div>
+                                <div class="caja">
+                                    <h3>$160,548</h3>
+                                    <p>Ingresos</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Widget Estadisticas -->
+                </div>
+            </main>
+            <!-- End Main -->
+
+
         </div>
     </div>
     
