--- a/practicas/dashboard/index.html
+++ b/practicas/dashboard/index.html
@@ -36,7 +36,8 @@
                             <h3 class="titulo">Nueva Entrada</h3>
                             <form action="">
                                 <input type="text" placeholder="Titulo de la entrada">
-                                <textarea placeholder="Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere nisi adipisci temporibus ad nemo repellendus veniam! Explicabo, expedita obcaecati? Nulla."></textarea>
+                                <textarea
+                                    placeholder="Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere nisi adipisci temporibus ad nemo repellendus veniam! Explicabo, expedita obcaecati? Nulla."></textarea>
                                 <div class="d-flex justify-content-end">
                                     <button><i class="icon icon-edit"></i>Enviar</button>
                                 </div>
@@ -44,8 +45,9 @@
                         </div>
                     </div>
                     <!-- End Widget Nueva Entrada -->
-                    <!-- Widget Estadisticas -->
+                    <!-- Widget Estadisticas y Comentarios -->
                     <div class="columna col-lg-5">
+                         <!-- Widget Estadisticas -->
                         <div class="widget estadisticas">
                             <h3 class="titulo">Estadisticas</h3>
                             <div class="contenedor d-flex flex-wrap">
@@ -63,8 +65,76 @@
                                 </div>
                             </div>
                         </div>
+                         <!-- End Widget Estadisticas -->  
+                        <!-- Widget de comentarios -->
+                        <div class="widget comentarios">
+                            <h3 class="titulo">Comentarios</h3>
+                            <div class="contenedor">
+                                <div class="comentario d-flex flex-wrap">
+                                    <div class="foto">
+                                        <a href="#">
+                                            <img src="img/persona1.jpg" width="100" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="texto">
+                                        <a href="#">Jhon Doe</a>
+                                        <p>en <a href="#">Mi primera entrada</a></p>
+                                        <p class="texto-comentario">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, accusantium.
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, minima.
+                                        </p>
+                                    </div>
+                                    <div class="botones d-flex justify-content-start flex-wrap w-100">
+                                        <button class="aprobar"><i class="icono icon-ok"></i>Aprobar</button>
+                                        <button class="eliminar"><i class="icono icon-cancel"></i>Eliminar</button>
+                                        <button class="bloquear"><i class="icono icon-flag"></i>Bloquear Usuario</button>
+                                    </div>            
+                                </div>
+                                <div class="comentario d-flex flex-wrap">
+                                    <div class="foto">
+                                        <a href="#">
+                                            <img src="img/persona2.jpg" width="100" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="texto">
+                                        <a href="#">Jhon Doe</a>
+                                        <p>en <a href="#">Mi primera entrada</a></p>
+                                        <p class="texto-comentario">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, accusantium.
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, minima.
+                                        </p>
+                                    </div>
+                                    <div class="botones d-flex justify-content-start flex-wrap w-100">
+                                        <button class="aprobar"><i class="icono icon-ok"></i>Aprobar</button>
+                                        <button class="eliminar"><i class="icono icon-cancel"></i>Eliminar</button>
+                                        <button class="bloquear"><i class="icono icon-flag"></i>Bloquear Usuario</button>
+                                    </div>            
+                                </div>
+                                <div class="comentario d-flex flex-wrap">
+                                    <div class="foto">
+                                        <a href="#">
+                                            <img src="img/persona3.jpg" width="100" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="texto">
+                                        <a href="#">Jhon Doe</a>
+                                        <p>en <a href="#">Mi primera entrada</a></p>
+                                        <p class="texto-comentario">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, accusantium.
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, minima.
+                                        </p>
+                                    </div>
+                                    <div class="botones d-flex justify-content-start flex-wrap w-100">
+                                        <button class="aprobar"><i class="icono icon-ok"></i>Aprobar</button>
+                                        <button class="eliminar"><i class="icono icon-cancel"></i>Eliminar</button>
+                                        <button class="bloquear"><i class="icono icon-flag"></i>Bloquear Usuario</button>
+                                    </div>            
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Widget de comentarios -->            
                     </div>
-                    <!-- End Widget Estadisticas -->
+                    <!-- End Widget Estadisticas y Comentarios -->
                 </div>
             </main>
             <!-- End Main -->
