--- a/practicas/redsocial/index.html
+++ b/practicas/redsocial/index.html
@@ -180,6 +180,7 @@
 						</div>
 					</div>
 				</div>
+				<!-- END PUBLICACION #1 -->
 
 				<!-- PUBLICACION #2 -->
 				<div class="publicacion">
